tests/snapshots/examples_fixtures/basics__strings.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/basics/strings.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
