tests/snapshots/examples_fixtures/basics__tuples.snap
---
source: tests/examples_fixtures_snapshots.rs
assertion_line: 27
---
Fixture: examples/basics/tuples.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
